# er_crane_x7

./: .gitignore  99-acranex7.rules  README.md  setup.repos
er_crane_x7/: CMakeLists.txt  README.md  package.xml
er_crane_x7_bringup/: CMakeLists.txt  package.xml
er_crane_x7_bringup/launch/: bringup.launch.py  simulation_bringup.launch.py
er_crane_x7_common/: README.md  package.xml  setup.cfg  setup.py
er_crane_x7_common/er_crane_x7_common/: arm_controller.py
er_crane_x7_config/: CMakeLists.txt  package.xml
er_crane_x7_config/rviz/: sim_viewer.rviz
er_crane_x7_config/worlds/: table.sdf
er_crane_x7_controller/: CMakeLists.txt  README.md  package.xml
er_crane_x7_controller/launch/: controller_server_launch.py
er_crane_x7_controller/src/: arm_pose_server.cpp  gripper_server.cpp  move_groupstate_server.cpp
er_crane_x7_description/: package.xml  setup.cfg  setup.py
er_crane_x7_description/config/: d435_bridge.yaml
er_crane_x7_description/er_crane_x7_description/: robot_description_loader.py
er_crane_x7_description/urdf/: crane_x7.gazebo.xacro  crane_x7.urdf.xacro  crane_x7.xacro  crane_x7_wide_two_finger_gripper.xacro  sim_d435.xacro  test.urdf
er_crane_x7_moveit_config/: CMakeLists.txt  package.xml
er_crane_x7_moveit_config/config/: crane_x7.srdf  sim_servo.yaml
er_crane_x7_moveit_config/launch/: moveit_group_launch.py
interfaces/er_crane_x7_srvs/: CMakeLists.txt  package.xml
interfaces/er_crane_x7_srvs/srv/: SetEEPose.srv  SetGoalstate.srv
